# nonemast

./: NEWS.bobby285271.md  README.md  changes.md  flake.nix  meson.build  nonemast.sh
.github/workflows/: main.yaml
data/: cz.ogion.Nonemast.gschema.xml  meson.build
src/: main.py  nonemast.gresource.xml  package_update.py  window.py  window.ui
src/gtk/: preferences-window.ui
src/nonemast/: launcher.in  main.py  meson.build  message_utils.py  nonemast.gresource.xml  package_update.py  update-details.ui  window.blp  window.py  window.ui
src/nonemast/gtk/: preferences-window.ui
src/nonemast/operations/: regenerate_commits_cinnamon.sh  update_arrow_style_gnome.sh
tests/: test_autosquashing.py  test_message_utils.py
